[gd_scene load_steps=13 format=3 uid="uid://deo1v83g2x8si"]

[ext_resource type="Script" path="res://Presets/QuestionReview.gd" id="1_hh0ba"]
[ext_resource type="Texture2D" uid="uid://dvqc2edmlw64a" path="res://assets/Rob_Top_Right.PNG" id="1_hipck"]
[ext_resource type="Texture2D" uid="uid://cnkhyl0ftx88p" path="res://Color 5/Panel 8.png" id="2_opiq7"]
[ext_resource type="FontFile" uid="uid://c608x6u2o8b2l" path="res://Font/Robfont-Regular.ttf" id="3_beeww"]
[ext_resource type="Texture2D" uid="uid://dddgcrpt7ghp" path="res://assets/Rob_Bottom_Left.PNG" id="6_ud0sb"]
[ext_resource type="Texture2D" uid="uid://bhwdt4belt4pj" path="res://Color 5/Button 1.png" id="7_xaaes"]
[ext_resource type="Texture2D" uid="uid://gdf14es3m6rb" path="res://Color 5/Button_Green.png" id="8_lncuo"]
[ext_resource type="Texture2D" uid="uid://b3g31nvwr3stk" path="res://border.png" id="9_txw0r"]
[ext_resource type="Texture2D" uid="uid://cdqchwfkc470h" path="res://assets/Quit_Button.PNG" id="10_vh3lk"]
[ext_resource type="BitMap" uid="uid://dkaruaa02hbql" path="res://assets/Button_Mask_Circular.PNG" id="11_0l3qv"]
[ext_resource type="Script" path="res://Presets/HoverButton.gd" id="12_1rh86"]
[ext_resource type="Script" path="res://addons/BTransition/Transitioner.gd" id="13_64y4x"]

[node name="QuestionReview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hh0ba")

[node name="RobTopRight" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("1_hipck")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 193.0
offset_right = 1578.0
offset_bottom = 1033.0
texture = ExtResource("2_opiq7")
expand_mode = 1

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 198.0
offset_right = 1538.0
offset_bottom = 315.0
theme_override_fonts/font = ExtResource("3_beeww")
theme_override_font_sizes/font_size = 110
text = "Question Overview"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Question List" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 99.0
offset_top = 321.0
offset_right = 1519.0
offset_bottom = 1003.0

[node name="VBoxContainer" type="VBoxContainer" parent="Question List"]
layout_mode = 2

[node name="ShowQuestion" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 4.0
offset_bottom = 4.0
mouse_filter = 1

[node name="RobBottomLeft" type="TextureRect" parent="ShowQuestion"]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("6_ud0sb")

[node name="GridContainer" type="GridContainer" parent="ShowQuestion"]
visible = false
layout_mode = 0
offset_left = 456.0
offset_top = 742.0
offset_right = 1660.0
offset_bottom = 1026.0
columns = 2

[node name="Button1" type="TextureButton" parent="ShowQuestion/GridContainer"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
texture_normal = ExtResource("7_xaaes")
stretch_mode = 0

[node name="CorrectWrongColor" type="TextureRect" parent="ShowQuestion/GridContainer/Button1"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_right = -1.0
offset_bottom = 140.0
texture = ExtResource("8_lncuo")
expand_mode = 1

[node name="Label" type="Label" parent="ShowQuestion/GridContainer/Button1"]
layout_mode = 0
offset_left = 16.0
offset_top = 20.0
offset_right = 583.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 25
text = "Placeholder text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button2" type="TextureButton" parent="ShowQuestion/GridContainer"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
texture_normal = ExtResource("7_xaaes")
stretch_mode = 0

[node name="CorrectWrongColor" type="TextureRect" parent="ShowQuestion/GridContainer/Button2"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_right = 601.0
offset_bottom = 140.0
texture = ExtResource("8_lncuo")
expand_mode = 1

[node name="Label" type="Label" parent="ShowQuestion/GridContainer/Button2"]
layout_mode = 0
offset_left = 18.0
offset_top = 20.0
offset_right = 583.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 25
text = "Placeholder text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button3" type="TextureButton" parent="ShowQuestion/GridContainer"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
texture_normal = ExtResource("7_xaaes")
stretch_mode = 0

[node name="CorrectWrongColor" type="TextureRect" parent="ShowQuestion/GridContainer/Button3"]
layout_mode = 0
offset_left = -1.0
offset_right = 601.0
offset_bottom = 140.0
texture = ExtResource("8_lncuo")
expand_mode = 1

[node name="Label" type="Label" parent="ShowQuestion/GridContainer/Button3"]
layout_mode = 0
offset_left = 18.0
offset_top = 20.0
offset_right = 583.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 25
text = "Placeholder text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Button4" type="TextureButton" parent="ShowQuestion/GridContainer"]
custom_minimum_size = Vector2(600, 140)
layout_mode = 2
texture_normal = ExtResource("7_xaaes")
stretch_mode = 0

[node name="CorrectWrongColor" type="TextureRect" parent="ShowQuestion/GridContainer/Button4"]
visible = false
layout_mode = 0
offset_left = -1.0
offset_right = 601.0
offset_bottom = 140.0
texture = ExtResource("8_lncuo")
expand_mode = 1

[node name="Label" type="Label" parent="ShowQuestion/GridContainer/Button4"]
layout_mode = 0
offset_left = 18.0
offset_top = 20.0
offset_right = 583.0
offset_bottom = 115.0
theme_override_font_sizes/font_size = 25
text = "Placeholder text"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ImageQuestion" type="Control" parent="ShowQuestion"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 579.0
offset_top = 511.0
offset_right = 619.0
offset_bottom = 551.0

[node name="question_text" type="Label" parent="ShowQuestion/ImageQuestion"]
layout_mode = 0
offset_left = -101.0
offset_top = -54.0
offset_right = 1072.0
offset_bottom = 211.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "dasdasdsa"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="image" type="TextureRect" parent="ShowQuestion/ImageQuestion"]
layout_mode = 0
offset_left = -69.0
offset_top = -459.0
offset_right = 1053.0
offset_bottom = -56.0
texture = ExtResource("9_txw0r")
expand_mode = 1
stretch_mode = 5

[node name="question_text" type="Label" parent="ShowQuestion"]
layout_mode = 0
offset_left = 474.0
offset_top = 107.0
offset_right = 1648.0
offset_bottom = 691.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 51
text = "dasdasdsa"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="QuitButton" type="TextureButton" parent="ShowQuestion"]
offset_left = 1748.0
offset_top = 45.0
offset_right = 1874.0
offset_bottom = 173.0
texture_normal = ExtResource("10_vh3lk")
texture_click_mask = ExtResource("11_0l3qv")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("12_1rh86")

[node name="QuitButton" type="TextureButton" parent="."]
offset_left = 1339.0
offset_top = 49.0
offset_right = 1465.0
offset_bottom = 177.0
texture_normal = ExtResource("10_vh3lk")
texture_click_mask = ExtResource("11_0l3qv")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("12_1rh86")

[node name="Transitioner" type="Node" parent="."]
script = ExtResource("13_64y4x")

[connection signal="pressed" from="ShowQuestion/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_main_quit_button_pressed"]
